Remove margin from recent searches to avoid whitespace in deals

--- a/apps/home/static/home/styles/components/_tiles.scss
+++ b/apps/home/static/home/styles/components/_tiles.scss
@@ -150,6 +150,7 @@
           color: #00aeef;
         }
         cursor: pointer;
+        margin-bottom: 0;
       }
     }
     &-bottom {
